force-app/main/default/objects/Adyen_Adapter__mdt/Adyen_Adapter__mdt.object-meta.xml
<CustomObject>
    <label>Adyen Adapter</label>
    <pluralLabel>Adyen Adapters</pluralLabel>
</CustomObject>