force-app/main/default/objects/Adyen_Adapter__mdt/fields/Authorize_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Authorize_Endpoint__c</fullName>
    <label>Authorize Endpoint</label>
    <length>64</length>
    <type>Text</type>
</CustomField>