force-app/main/default/objects/Adyen_Adapter__mdt/fields/Capture_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Capture_Endpoint__c</fullName>
    <label>Capture Endpoint</label>
    <length>64</length>
    <type>Text</type>
</CustomField>