force-app/main/default/objects/Adyen_Adapter__mdt/fields/Client_Key__c.field-meta.xml
<CustomField>
    <fullName>Client_Key__c</fullName>
    <description>Client key to authenticate requests</description>
    <inlineHelpText>Can be found at the customer area</inlineHelpText>
    <label>Client Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>