force-app/main/default/objects/Adyen_Adapter__mdt/fields/Endpoint_Api_Version__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Api_Version__c</fullName>
    <label>Endpoint Api Version</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>