force-app/main/default/objects/Adyen_Adapter__mdt/fields/Endpoint_Method__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Method__c</fullName>
    <label>Endpoint Method</label>
    <length>16</length>
    <type>Text</type>
</CustomField>