force-app/main/default/objects/Adyen_Adapter__mdt/fields/Endpoint_Path__c.field-meta.xml
<CustomField>
    <fullName>Endpoint_Path__c</fullName>
    <label>Endpoint Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>