force-app/main/default/objects/Adyen_Adapter__mdt/fields/HMAC_Key__c.field-meta.xml
<CustomField>
    <fullName>HMAC_Key__c</fullName>
    <label>HMAC Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>