force-app/main/default/objects/Adyen_Adapter__mdt/fields/Merchant_Account__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Account__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Merchant Account</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>