force-app/main/default/objects/Adyen_Adapter__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description>Named credential containing the associated external credential with the API Key for this merchant account.</description>
    <inlineHelpText>Used for calling Adyen with the correct Api Key</inlineHelpText>
    <label>Named Credential</label>
    <length>64</length>
    <type>Text</type>
</CustomField>