force-app/main/default/objects/Adyen_Adapter__mdt/fields/Package_Namespace__c.field-meta.xml
<CustomField>
    <fullName>Package_Namespace__c</fullName>
    <description>This field is used to hold the namespace for the Named Credential</description>
    <inlineHelpText>It holds the namespace for the Named Credential</inlineHelpText>
    <label>Named Credential Namespace</label>
    <length>64</length>
    <type>Text</type>
</CustomField>