force-app/main/default/objects/Adyen_Adapter__mdt/fields/Payment_Methods_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Payment_Methods_Endpoint__c</fullName>
    <label>Payment Methods Endpoint</label>
    <length>64</length>
    <type>Text</type>
</CustomField>