force-app/main/default/objects/Adyen_Adapter__mdt/fields/Payments_Details_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Payments_Details_Endpoint__c</fullName>
    <label>Payments Details Endpoint</label>
    <length>64</length>
    <required>true</required>
    <type>Text</type>
</CustomField>