force-app/main/default/objects/Adyen_Adapter__mdt/fields/Payments_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Payments_Endpoint__c</fullName>
    <label>Payments Endpoint</label>
    <length>64</length>
    <type>Text</type>
</CustomField>